# envkeep

./: .gitignore  README.md  pyproject.toml
envkeep/: .gitignore  README.md  cli.py  config.py  core.py  pyproject.toml  utils.py
envkeep/envkeep/: cli.py  config.py  core.py  utils.py
